--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
 }
 
  ul.navbar {
+  display: flex;
+  justify-content: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -13,6 +15,7 @@ body {
   width: 100%;
   top: 0;
   margin-top: 0;
+  font-family: Arial;
 }
     
 ul.navbar li {
